--- a/index.Rmd
+++ b/index.Rmd
@@ -2,17 +2,22 @@
 title: "Tom Carpino's Webpage"
 ---
 
-### I have a webpage!
+### Introduction
 
-And I can put all kinds of stuff on it!
+Tom Carpino is a dedicated, innovative, and skilled data analyst experienced in SAS, SQL, and quality improvement seeking full-time healthcare or business strategy consulting or analyst positions to start in Summer 2019. 
 
-### Add links 
+I have worked on numerous diverse teams in high-intensity challenges, hackathons, and competitions. This has been highlighted in solutions to healthcare cases at Johns Hopkins and Yale, in topics ranging from stem cell banking and therapy to wearable medical devices. Additionally, I was an invited participant through the Broad Institute of Harvard and MIT to compete in a queer health hackathon to increase awareness of health disparities amongst LGBTQ individuals. 
 
-I like [Google](https://www.google.com). 
+Other past projects and experience include strategic development and project management for a tech startup, Columbia's workplace design challenge, ecological modeling in Portugal, and monitoring and evaluation at a public hospital in the Dominican Republic. I also have significant experience in epidemiologic outbreak investigation and infection prevention.
 
-I also linked my [about page](about.html). 
+### Important Experience 
+
+I also linked my resume in the [Professional Experience](Experience.html) tab. 
 
 ### Headshot
  
+<img src="Images/headshot.jpg" style="width:75%"> 
 
-<img src="Images/headshot.jpg" style="width:75%">
+### Website Creation 
+
+Information abou thow this website was created can be found under the [About](About.html) tab. 
