--- a/index.Rmd
+++ b/index.Rmd
@@ -10,9 +10,13 @@ I have worked on numerous diverse teams in high-intensity challenges, hackathons
 
 Other past projects and experience include strategic development and project management for a tech startup, Columbia's workplace design challenge, ecological modeling in Portugal, and monitoring and evaluation at a public hospital in the Dominican Republic. I also have significant experience in epidemiologic outbreak investigation and infection prevention.
 
-### Important Experience 
+### Important Information and Links 
 
 I also linked my resume in the [Professional Experience](Experience.html) tab. 
+
+Tom's Github account can be found [here](https://github.com/tomcarpino). 
+
+Tom's email can be found using the mail icon tool on the top right.  
 
 ### Headshot
  
