--- a/Experience.Rmd
+++ b/Experience.Rmd
@@ -6,6 +6,6 @@ title: "Experience"
 
 Check out my [LinkedIn Profile](https://linkedin.com/in/tomcarpino/).
 
-Here is a copy of my current resume: 
+PDF does not appear to be working; 
 
-<img src="Documents/resume.pdf" alt="some text"  width="4200" height="4200">
+<img src="Documents/resume.pdf" alt="Just see my LinkedIn Profile Above :)"  width="4200" height="4200">
